--- a/views/layout.html
+++ b/views/layout.html
@@ -33,7 +33,7 @@
     <div class="container-fluid">
         <header class="row">
             <div class="col-xs-12 col-sm-6">
-                <h1>Ananda Yoga</h1>
+                <h1><a href="/">Ananda Yoga</a></h1>
             </div>
             <div class="col-xs-12 col-sm-6">
                 <h2 class="text-right">
@@ -69,7 +69,7 @@
             {%block main%}{%endblock%}
         </main>
         <footer class="row">
-
+            {%block footer%}{%endblock%}
         </footer>
     </div>
     {%block finally%} {%endblock%}
