--- a/styles/ananda.css
+++ b/styles/ananda.css
@@ -1,3 +1,77 @@
-.admin-box{
-     border:1px solid rgba{0,0,0,.3};   
+header {
+    background: url(/img/wheat.jpg) center/cover;
+}
+header h1 {
+    color: white;
+    background-color: rgba(0, 0, 0, .5);
+    display: inline-block;
+    padding: 10px;
+    border-radius: .2em;
+}
+nav li {
+    background-color: black;
+    width: 15%;
+    margin: 0;
+    text-align: center;
+}
+nav li a {
+    color: white;
+}
+main {
+    padding-top:1em;
+    background-image: url(/img/green_cup.png);
+}
+#left > div {
+    border: 1px solid rgba(0, 0, 0, .3);
+    /* margin-top: 1em; */
+    margin-bottom: 1em;
+    padding: 1em;
+    background-color: #FEFEFE;
+    border-radius: 3px;
+}
+h2,
+h3,
+h4,
+h5 {
+    font-family: Verdana, sans-serif
+}
+#left>div>h2 {
+    color: hsl(50, 100%, 50%);
+    font-family: Verdana, sans-serif;
+    margin: 0;
+    border-bottom: 1px dotted rgba(0, 0, 0, .1);
+}
+#welcome {
+    margin-top: 1em;
+}
+#welcome > img {
+    margin: 1em 1em 1em 0;
+}
+.article-wrapper {
+    padding-top: 1em;
+}
+article {
+    background-color: #FEFEFE;
+    border: 1px solid rgba(0, 0, 0, .3);
+    padding-left: 1em;
+}
+article h1 {
+    text-align: center;
+}
+article img {
+    float: right;
+}
+article:after {
+    display: block;
+    content: "";
+    clear: both;
+}
+article time {
+    font-size: .8em;
+}
+footer {
+    margin-top: 2em;
+}
+footer p {
+    text-align: right;
 }
